test: 테스트 DB 초기화 코드 개선